--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,12 @@
 name: ms_material_color_example
 description: Ms MaterialColor Demo
+publish_to: none
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
