--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,13 @@ version: 0.1.0
 homepage: https://github.com/Marcus-Software/ms_material_color
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  pedantic: ^1.11.0
 
 dev_dependencies:
   test: ^1.9.2
